2011-09-03  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: `ignore-errors' -> condition-case

	* Fix: remove `remove-if' warning

	* Improvement: async repository browser.

	* Release: 0.9.12

2011-08-18  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: `fsvn-magic-get-file-buffer' problem

	* Change: Open file with async from repository browser.

2011-08-17  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: wrong buffer name when `fsvn-browse-open-repository'.

	* Change: disable `fsvn-browse-toggle-sort' when in repository buffer.

	* Fix: Check file is under versioned when opening log.

	* Change: cleanup `file-name-history' after ediff.

	* Fix: fsvn-svk.el `fsvn-svk-browse-draw-mirrored-url' suppress in remote directory.

	* Fix: browse repository sorting problem.

	* Fix: follow the svn trivial specification changing. (about exporting filename)

2011-07-01  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Implements magic `directory-file-name' and `file-name-directory' at repository root.

2011-06-22  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fix bug when modifing about `libxml-parse-xml-region'

2011-06-16  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>

	* Change: log view buffer name.

2011-04-26  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-log-list-fetch-all bound to `z F'

2011-04-24  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: Use `libxml-parse-xml-region' if exists.

2011-03-31  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: advice problem.

2011-03-30  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: Create `uninstall' target

2011-03-29  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: More elegant fancy mode-line.

2011-03-19  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.11

2011-03-08  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
