@@ -1,3 +1,3 @@
 Visit http://fsvn.sourceforge.jp/ to read all instructions.
 
-git@github.com:mhayashi1120/Emacs-fsvn.git is mirroring repository from svn+ssh://svn.sourceforge.jp/svnroot/fsvn/
+git@github.com:mhayashi1120/Emacs-fsvn.git is a mirroring repository from svn+ssh://svn.sourceforge.jp/svnroot/fsvn/
