@@ -1,3 +1,7 @@
+2011-09-15  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Improve: colorize status.
+
 2011-09-03  Masahiro Hayashi (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Fix: `ignore-errors' -> condition-case
